// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders 1`] = `
Array [
  <link
    href="https://dtlv35ikt30on.cloudfront.net/latest/default/semantic.min.css"
    onLoad={[Function]}
    rel="stylesheet"
  />,
  <div
    className="ui container"
  >
    Test
  </div>,
]
`;

exports[`Renders with Error 1`] = `
Array [
  <link
    href="https://dtlv35ikt30on.cloudfront.net/latest/default/semantic.min.css"
    onLoad={[Function]}
    rel="stylesheet"
  />,
  <div
    className="ui container"
  >
    Test 
    <p>
      Oh no!!
    </p>
    <div
      className="ui error message"
      style={
        Object {
          "backgroundColor": "mistyrose",
          "bottom": 0,
          "left": 0,
          "position": "fixed",
          "right": 0,
        }
      }
    >
      <div
        className="ui right internal close rail"
      >
        <button
          className="ui red compact icon right floated button"
          onClick={[Function]}
        >
          <i
            aria-hidden="true"
            className="close icon"
            onClick={[Function]}
          />
        </button>
      </div>
      <b>
        Error
      </b>
      <p>
        Test error
      </p>
    </div>
  </div>,
]
`;
